# Herbrand

./: .gitignore  README.md  configure  configure.ac  index.html  params.json
doc/: ecc_reglas.tex  ecc_reglas2.tex  reglas.tex
src/: Makefile  ast.ml  ast.mli  constraints.ml  context.ml  context.mli  eq.ml  herbrand  lexer.ml  lexer.mll  logic.ml  main.ml  parser.ml  parser.mli  parser.mly  pretty.ml  satisfiable.ml  term.ml  term.mli  tests.ml  typechecker.ml  typechecker.mli  typecheker.ml  utils.ml
